<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.localtrip.jejulocaltrip.view.MainActivity">


    <ScrollView
        android:layout_above="@+id/layout_button_bottom"
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.v4.view.ViewPager
                        android:id="@+id/viewPager"
                        android:layout_width="match_parent"
                        android:layout_height="230dp" />

                    <Button
                        android:id="@+id/button_setting"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="@color/colorWhite"
                        android:text="@string/date_select_button_str"
                        android:textAllCaps="false"
                        android:textSize="11dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorLightGray" />
                </LinearLayout>

                <android.support.design.widget.AppBarLayout
                    android:id="@+id/appBarLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:fitsSystemWindows="true"
                    app:elevation="0dp">

                    <android.support.design.widget.CollapsingToolbarLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.v7.widget.Toolbar
                            android:id="@+id/toolbar"
                            android:layout_width="match_parent"
                            android:layout_height="60dp">

                        </android.support.v7.widget.Toolbar>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/title_toolbar"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"
                                android:text="JeJulocaltrip"
                                android:textColor="@color/colorWhite"
                                android:textSize="15dp" />
                        </RelativeLayout>
                    </android.support.design.widget.CollapsingToolbarLayout>
                </android.support.design.widget.AppBarLayout>

            </RelativeLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGray" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:scrollbars="none">

                <LinearLayout
                    android:id="@+id/layout_popular"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:src="@drawable/main_image5"
                        android:id="@+id/imageView_popular1"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="15dp"
                        android:scaleType="fitXY" />

                    <ImageView
                        android:src="@drawable/main_image6"
                        android:id="@+id/imageView_popular2"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="15dp"
                        android:scaleType="fitXY" />

                    <ImageView
                        android:src="@drawable/main_image7"
                        android:id="@+id/imageView_popular3"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="15dp"
                        android:scaleType="fitXY" />

                    <ImageView
                        android:src="@drawable/main_image8"
                        android:id="@+id/imageView_popular4"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="15dp"
                        android:scaleType="fitXY" />
                </LinearLayout>
            </HorizontalScrollView>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/colorLightGray" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/main_image9"
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:scaleType="fitXY" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/recommend_trip_str"
                    android:textSize="11dp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="15dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="20dp"
                    android:text="@string/recommend_course_str"
                    android:textColor="@color/colorDarkGray"
                    android:textSize="13dp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerview_recommendCourse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:scrollbars="none">

                </android.support.v7.widget.RecyclerView>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/colorLightGray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="15dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="20dp"
                    android:text="@string/recommend_guide_str"
                    android:textColor="@color/colorDarkGray"
                    android:textSize="13dp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerview_recommendGuide"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:scrollbars="none">

                </android.support.v7.widget.RecyclerView>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>


    <RelativeLayout
        android:id="@+id/layout_button_bottom"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true">

        <include
            layout="@layout/layout_bottom_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />


</RelativeLayout>
